[package]
name = "neoft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["detect"]

detect = []

[dependencies]
aho-corasick = "1.0.2"
lazy-regex = "3.0.0"
once_cell = "1.18.0"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.9.1"
strum = { version = "0.25.0", features = ["derive", "phf"] }
