[package]
name = "tft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["detect"]

detect = [
    "dep:aho-corasick",
    "dep:lazy-regex",
    "dep:once_cell",
    "dep:phf",
    "dep:regex",
]

serde = ["dep:serde_with"]

[dependencies]
aho-corasick = { version = "1.0.2", optional = true }
lazy-regex = { version = "3.0.0", optional = true }
once_cell = { version = "1.18.0", optional = true }
phf = { version = "0.11.2", features = ["macros"], optional = true }
regex = { version = "1.9.1", optional = true }
serde_with = { version = "3.1.0", optional = true }
strum = { version = "0.25.0", features = ["derive", "phf"] }
